--- a/app/todo/package.json
+++ b/app/todo/package.json
@@ -27,5 +27,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest": "^24.7.1",
+    "jest-dom": "^3.1.4",
+    "react-testing-library": "^7.0.0"
   }
 }
