--- a/app/todo/package.json
+++ b/app/todo/package.json
@@ -29,8 +29,22 @@
     ]
   },
   "devDependencies": {
+    "husky": "^2.2.0",
     "jest": "^24.7.1",
     "jest-dom": "^3.1.4",
+    "lint-staged": "^8.1.6",
+    "prettier": "^1.17.0",
     "react-testing-library": "^7.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,css,json,md}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
